# ai-live-admin-backend

./: .env.example  .gitignore  README.md  alembic.ini  deploy_backend_conda.sh  pyproject.toml
alembic/: env.py
alembic/versions/: 001_add_user_quota_fields.py  002_add_quota_grants.py  003_fix_quota_grants_columns.py  004_add_app_settings.py  005_add_user_settings_and_voices.py  006_add_live_session_room_id.py
app/: __init__.py  main.py
app/api/: deps.py
app/api/routes/: ai_usage.py  auth.py  dashboard.py  integration_users.py  live_sessions.py  quota_grants.py  settings.py  tts_usage.py  users.py
app/core/: config.py  security.py
app/db/: base.py
app/models/: __init__.py  app_setting.py  live_session.py  quota_grant.py  usage.py  user.py  user_setting.py  voice_preset.py
app/schemas/: auth.py  common.py  quota_grant.py  settings.py  usage.py  user.py
app/services/: bootstrap.py  quota.py  settings.py
